feature: update skills
* feature: add buttons for javascript and php in the skill section

* feat: add the javascript article to skills

* refactor: clean up Java skills

* feature: change the DB skills

* feature: update all skills

--- a/index.html
+++ b/index.html
@@ -98,27 +98,35 @@
             <!-- ****************************************** SELECTION ****************************************** -->
             <h2>Compétences</h2>
             <ul id="selection">
-                <li class="btn btnSelected" id="transverse_button">
+                <li class="btn btnSelected" id="transverse_button" title="Transverses">
                     <img src="img/double-arrow.svg" alt="">
-                    <p>Transverses</p>
+                    <!-- <p>Transverses</p> -->
                 </li>
-                <li class="btn" id="java_button">
+                <li class="btn" id="javascript_button" title="Javascript">
+                    <img src="img/node.png" alt="">
+                    <!-- <p>Transverses</p> -->
+                </li>
+                <li class="btn" id="java_button" title="Java">
                     <img src="img/java.svg" alt="Java Logo">
-                    <p>JAVA</p>
+                    <!-- <p>JAVA</p> -->
                 </li>
-                <li class="btn" id="back_button">
-                    <img src="img/back-end.png" alt="hard-drive logo">
-                    <p>Back-End</p>
+                <li class="btn" id="php_button" title="PHP">
+                    <img src="img/php.svg" alt="">
+                    <!-- <p>JAVA</p> -->
                 </li>
-                <li class="btn" id="front_button">
+                <li class="btn" id="db_button" title="Data Base">
+                    <img src="img/db.png" alt="Data Base Logo">
+                    <!-- <p>Back-End</p> -->
+                </li>
+                <li class="btn" id="front_button" title="Front End">
                     <img src="img/Front-end.png" alt="Front-End logo">
-                    <p>Front-End</p>
+                    <!-- <p>Front-End</p> -->
                 </li>
             </ul>
 
             <!-- ****************************************** TRANSVERSE ****************************************** -->
             <article id="transverse_article">
-                <ul class="lign">
+                <ul>
                     <li>
                         <img src="img/Union_Jack.svg">
                         <p>Anglais</p>
@@ -131,8 +139,6 @@
                         <img src="img/uml.png" alt="">
                         <p>UML</p>
                     </li>
-                </ul>
-                <ul class="lign">
                     <li>
                         <img src="img/list.svg" alt="">
                         <p>Gestion de projet</p>
@@ -145,54 +151,61 @@
                         <img src="img/management.svg">
                         <p>Management</p>
                     </li>
-                </ul>
-                <ul class="lign">
                     <li>
-                        <img src="img/Autonomie.svg" >
-                        <p>Autonomie</p>
+                        <img src="img/Linux.png" >
+                        <p>Linux</p>
                     </li>
                     <li>
                         <img src="img/git.png" alt="git logo">
                         <p>Git</p>
                     </li>
                     <li>
-                        <img src="img/graduation-hat.svg" alt="graduation hat">
-                        <p>Autodidacte</p>
+                        <img src="img/continuous-integration.webp" alt="">
+                        <p>Intégration continue</p>
                     </li>
                 </ul>
             </article>
 
+            <!-- *************************************** Javascript *************************************** -->
+            <article id="javascript_article">
+                <ul>
+                    <li>
+                        <img src="img/JS.webp" alt="Javascipt">
+                        <p>Javascript</p>
+                    </li>
+                    <li>
+                        <img src="img/node.webp" alt="Node">
+                        <p>Node</p>
+                    </li>
+                    <li>
+                        <img src="img/jest.webp" alt="Jest">
+                        <p>Jest</p></li>
+                    </li>
+                    <li>
+                        <img src="img/mongoose.png" alt="Mongoose">
+                        <p>Mongoose</p></li>
+                    </li>
+                </ul>
+            </article>
             <!-- ****************************************** JAVA ****************************************** -->
             <article id="java_article">
-                <ul class="lign">
+                <ul>
                     <li>
                         <img src="img/Java-ee.png" alt="Java EE Logo">
                         <p>Java EE</p>
                     </li>
                     <li>
-                        <img src="img/Java-JSF.png" alt="Java JSF Logo">
-                        <p>JSF / JSP</p>
-                    </li>
-                    <li>
                         <img src="img/JUnit.png" alt="Junit Logo">
                         <p>JUnit</p>
                     </li>
-                </ul>
-                <ul class="lign">
                     <li>
                         <img src="img/Maven.png" alt="Maven Logo">
                         <p>Maven</p>
                     </li>
                     <li>
-                        <img src="img/JDBC.png" alt="JDBC logo">
-                        <p>JDBC</p>
-                    </li>
-                    <li>
                         <img src="img/Spring.png" alt="Spring Logo">
                         <p>Spring</p>
                     </li>
-                </ul>
-                <ul class="lign">
                     <li>
                         <img src="img/Selenium.png" alt="Selenium Logo">
                         <p>Selenium</p>
@@ -208,41 +221,43 @@
                 </ul>
             </article>
 
-            <!-- ****************************************** BACK END ****************************************** -->
-            <article id="back_article">
-                <h4>Languages</h4>
+            <!-- ****************************************** PHP ******************************************* -->
+            <article id="php_article">
                 <ul>
                     <li>
-                        <img src="img/php.svg" alt="php logo">
+                        <img src="img/php.svg" alt="PHP Logo">
                         <p>PHP</p>
                     </li>
                     <li>
-                        <img src="img/sql.jpg">
-                        <p>SQL</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <h4>BDD</h4>
-                        <ul>
-                            <li>
-                                <img src="img/MySQL.png" alt="">
-                                <p>MySQL</p>
-                            </li>
-                        </ul>
+                        <img src="img/Symfony.svg" alt="Symfony Logo">
+                        <p>Symfony</p>
                     </li>
                     <li>
-                        <h4>Frameworks</h4>
-                        <ul>
-                            <li>
-                                <img src="img/Symfony.svg" alt="Symfony logo">
-                                <p>Symfony</p>
-                            </li>
-                        </ul>
+                        <img src="img/doctrine.svg" alt="Doctrine Logo">
+                        <p>Doctrine</p>
+                    </li>
+                    <li>
+                        <img src="img/composer.png" alt="Composer Logo">
+                        <p>Composer</p>
                     </li>
                 </ul>
-                <h4>Interfaces</h4>
+            </article>
+
+            <!-- **************************************** BACK END **************************************** -->
+            <article id="db_article">
                 <ul>
+                    <li>
+                        <img src="img/mySQL.png" alt="MySQL logo">
+                        <p>MySQL</p>
+                    </li>
+                    <li>
+                        <img src="img/mariadb-vertical_white.svg">
+                        <p>MariaDB</p>
+                    </li>
+                    <li>
+                        <img src="img/MongoDB_Leaf_FullColor_RGB.svg" alt="MongoDB Logo">
+                        <p>MongoDB</p>
+                    </li>
                     <li>
                         <img src="img/phpmyadmin.png" alt="phpmyadmin logo">
                         <p>PHPMyAdmin</p>
@@ -256,7 +271,6 @@
 
             <!-- ****************************************** FRONT END ****************************************** -->
             <article id=front_article>
-                <h4>Languages</h4>
                 <ul>
                     <li>
                         <img src="img/html.svg" alt="html5 logo">
@@ -267,15 +281,12 @@
                         <p>CSS</p>
                     </li>
                     <li>
-                        <img src="img/JS.png" alt="javascript logo">
+                        <img src="img/JS.webp" alt="javascript logo">
                         <p>Javascript</p>
                     </li>
-                </ul>
-                <h4>Frameworks</h4>
-                <ul>
                     <li>
-                        <img src="img/electronJS.png" alt="electronJS logo">
-                        <p>electron JS</p>
+                        <img src="img/bootstrap.svg" alt="Bootstrap logo">
+                        <p>Bootstrap</p>
                     </li>
                     <li>
                         <img src="img/AngularJS.svg" alt="AngularJS logo">
@@ -325,7 +336,7 @@
 
     <footer>
         <ul>
-            <li><a href="" class="button_mail"><img src="img/email.svg"></a></li>
+            <li><a href="" class="button_mail"><img src="img/"></a></li>
             <li><a href="https://www.linkedin.com/in/benjamin-petel/" target="_blank"><img src="img/linkedin.svg"></a></li>
             <li><a href="https://github.com/Benjamin-PETEL" target="_blank"><img src="img/github.svg"></a></li>
         </ul>
