style: skills are now all available on one line

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
     <footer>
         <ul>
-            <li><a href="" class="button_mail"><img src="img/"></a></li>
+            <li><a href="" class="button_mail"><img src="img/email.svg"></a></li>
             <li><a href="https://www.linkedin.com/in/benjamin-petel/" target="_blank"><img src="img/linkedin.svg"></a></li>
             <li><a href="https://github.com/Benjamin-PETEL" target="_blank"><img src="img/github.svg"></a></li>
         </ul>
