feature: values reworked

--- a/index.html
+++ b/index.html
@@ -305,29 +305,27 @@
                 <h2>Valeurs</h2>
                 <ul>
                     <li>
-                        <img src="img/Initiateur_Apnee.jpg" alt="">
-                        <p><strong>Transmission:</strong>
-                        <br>Initiateur apnée
+                        <img src="img/teach.svg" alt="">
+                        <p>Transmission</p>
+                    </li>
+                    <li>
+                        <img src="img/cup.svg" alt="">
+                        <p>Compétition
+                        <!-- <br>Compétiteur depuis toujours dans plusieurs disciplines -->
                         </p>
                     </li>
                     <li>
-                        <img src="img/Competition.jpg" alt="">
-                        <p><strong>Compétition:</strong>
-                        <br>Compétiteur depuis toujours dans plusieurs disciplines
+                        <img src="img/team.svg" alt="">
+                        <p>Confiance / Equipe
+                        <!-- <br>L'apnée et l'escalade sont 2 sports où la confiance dans l'équipe est primordiale -->
                         </p>
                     </li>
-                    <li>
-                        <img src="img/car_design.png" alt="">
-                        <p><strong>Gestion du stress:</strong>
-                        <br>Habitué à travailler dans des environnements très exigeants
+                    <!-- <li hidden>
+                        <img hidden src="img/car_design.png" alt="">
+                        <p hidden>
+                            Gestion du stress: Habitué à travailler dans des environnements très exigeants
                         </p>
-                    </li>
-                    <li>
-                        <img src="img/Apnee_securite.jpg" alt="">
-                        <p><strong>Confiance / Equipe:</strong>
-                        <br>L'apnée et l'escalade sont 2 sports où la confiance dans l'équipe est primordiale
-                        </p>
-                    </li>
+                    </li> -->
                 </ul>
                 <a href="" class="btn btnImportant button_mail">Contactez moi</a>
             </div>
