feature: improve the values section

--- a/index.html
+++ b/index.html
@@ -304,21 +304,17 @@
             <div>
                 <h2>Valeurs</h2>
                 <ul>
-                    <li>
+                    <li id="teach_button">
                         <img src="img/teach.svg" alt="">
                         <p>Transmission</p>
                     </li>
-                    <li>
+                    <li id="competition_button">
                         <img src="img/cup.svg" alt="">
-                        <p>Compétition
-                        <!-- <br>Compétiteur depuis toujours dans plusieurs disciplines -->
-                        </p>
+                        <p>Compétition</p>
                     </li>
-                    <li>
+                    <li id="team_button">
                         <img src="img/team.svg" alt="">
-                        <p>Confiance / Equipe
-                        <!-- <br>L'apnée et l'escalade sont 2 sports où la confiance dans l'équipe est primordiale -->
-                        </p>
+                        <p>Equipe</p>
                     </li>
                     <!-- <li hidden>
                         <img hidden src="img/car_design.png" alt="">
@@ -329,6 +325,27 @@
                 </ul>
                 <a href="" class="btn btnImportant button_mail">Contactez moi</a>
             </div>
+            <article id="teach_article">
+                <div>
+                    <h3>Transmission</h3>
+                    <img src="img/Initiateur_Apnee.jpg">
+                    <p>J'ai toujours appris énormément au contact des autres. Il me semble donc normal de transmettre à mon tour ce que j'ai reçu. C'est pourquoi j'ai été amener à encadrer des jeunes en escalade. J'ai aussi passé mon brevet d'initiateur apnée. Enfin j'ai été en charge d'encadrer des jeunes ingénieurs en stage de fin d'études.</p>
+                </div>
+            </article>
+            <article id="competition_article">
+                <div>
+                    <h3>Competition</h3>
+                    <img src="img/Competition.jpg">
+                    <p>Compétiteur en natation et en escalade, j'adore les challenges. La compétition est un moyen de se fixer des objectifs et de travailler à les atteindre. C'est aussi le dépassement de soi dans les moments critique ainsi qu'un bon entrainement à la gestion du stress.</p>
+                </div>
+            </article>
+            <article id="team_article">
+                <div>
+                    <h3>Equipe</h3>
+                    <img src="img/Apnee_securite.jpg">
+                    <p>L'apnée et l'escalade sont 2 sports où la performance de l'individu n'est possible que à la condition d'avoir une confiance absolue en l'équipier. A ce titre je travail toujours en sorte que l'on puisse compter sur moi.</p>
+                </div>
+            </article>
         </section>
     </main>
 
