--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <nav>
         <a href="#home" class="nav-logo"><img src="img/home.svg"></a>
         <ul class="nav-menu">
-            <li><a href="#home" class="nav-link">Acceuil</a></li>
+            <li><a href="#home" class="nav-link">Accueil</a></li>
             <li><a href="#presentation" class="nav-link">Présentation</a></li>
             <li><a href="#skills" class="nav-link">Compétences</a></li>
             <li><a href="#values" class="nav-link">Valeurs</a></li>
