add projects section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <li><a href="#home" class="nav-link">Accueil</a></li>
             <li><a href="#presentation" class="nav-link">Présentation</a></li>
             <li><a href="#skills" class="nav-link">Compétences</a></li>
+            <li><a href="#projects" class="nav-link">Projets</a></li>
             <li><a href="#values" class="nav-link">Valeurs</a></li>
         </ul>
         <div class="hamburger">
@@ -297,6 +298,23 @@
             <a href="" class="btn btnImportant button_mail">Contactez moi</a>
             </div>
 
+        </section>
+
+        <!-- PROJECTS -->
+        <section id="projects">
+            <div>
+                <h2>Projets</h2>
+                <article class="carousel_wrapper">
+                    <div class="carousel">
+                        <img class="carousel_photo active" src="./img/cheatCheets.webp" alt="">
+                        <img class="carousel_photo next" src="./img/SayWoof.webp" alt="">
+                        <img class="carousel_photo prev" src="./img/LogoEnglishBattle.webp" alt="">
+
+                        <div id="carousel_button_next"></div>
+                        <div id="carousel_button_prev"></div>
+                    </div>
+                </article>
+            </div>
         </section>
 
         <!-- VALUES -->
