add caroussel to project section

--- a/index.html
+++ b/index.html
@@ -304,16 +304,20 @@
         <section id="projects">
             <div>
                 <h2>Projets</h2>
-                <article class="carousel_wrapper">
                     <div class="carousel">
-                        <img class="carousel_photo active" src="./img/cheatCheets.webp" alt="">
-                        <img class="carousel_photo next" src="./img/SayWoof.webp" alt="">
-                        <img class="carousel_photo prev" src="./img/LogoEnglishBattle.webp" alt="">
-
-                        <div id="carousel_button_next"></div>
                         <div id="carousel_button_prev"></div>
+                        <article>
+                            <img src="./img/cheatCheets.webp" alt="">
+                        </article>
+                        <article>
+                            <img src="./img/SayWoof.webp" alt="">
+                        </article>
+                        <article>
+                            <img src="./img/LogoEnglishBattle.webp" alt="">
+                        </article>
+                        <div id="carousel_button_next"></div>
                     </div>
-                </article>
+                <a href="" class="btn btnImportant button_mail">Contactez moi</a>
             </div>
         </section>
 
