add responsive to project modal

--- a/index.html
+++ b/index.html
@@ -326,15 +326,15 @@
             <div>
                 <h2>Valeurs</h2>
                 <ul>
-                    <li id="teachBtn">
+                    <li class="btn" id="teachBtn">
                         <img src="img/teach.svg" alt="">
                         <p>Transmission</p>
                     </li>
-                    <li id="competitionBtn">
+                    <li class="btn" id="competitionBtn">
                         <img src="img/cup.svg" alt="">
                         <p>Compétition</p>
                     </li>
-                    <li id="teamBtn">
+                    <li class="btn" id="teamBtn">
                         <img src="img/team.svg" alt="">
                         <p>Equipe</p>
                     </li>
@@ -350,8 +350,8 @@
         <!-- projects modals -->
         <article class="modal" id="cheatsheetsArticle">
             <h3>CheatCheets</h3>
-            <div>
-                <img src="./img/CheatSheet_Screenshot.png" alt="">
+            <div class="modal_projects">
+                <img class="illustration" src="./img/CheatSheet_Screenshot.png" alt="">
                 <div>
                     <p>
                         Ce projet simple a 2 buts: <br>
@@ -359,17 +359,17 @@
                         - Apprendre de nouvelles technologies pour moi. <br>
                     </p>
                     <ul>
-                        <li><a class="btn" href="http://176.146.11.193:8081" target="_blank"><img src="./img/cheatCheets.webp"></a></li>
-                        <li><a class="btn" href="https://github.com/Benjamin-PETEL/CheatSheets" target="_blank"><img src="./img/github_dark.svg" alt=""></a></li>
+                        <li class="btn"><a href="http://176.146.11.193:8081" target="_blank"><img src="./img/cheatCheets.webp"></a></li>
+                        <li class="btn"><a href="https://github.com/Benjamin-PETEL/CheatSheets" target="_blank"><img src="./img/github_dark.svg" alt=""></a></li>
                     </ul>
                 </div>
             </div>
         </article>
         <article class="modal" id="dogSymfonyArticle">
             <h3>Dog Symfony</h3>
-            <div>
-                <img src="./img/dogSymfony_Screenshot.png" alt="">
-                <div>
+            <div class="modal_projects">
+                <img class="illustration" src="./img/dogSymfony_Screenshot.png" alt="">
+                <div class="modal_projects">
                     <p>
                         Ce projet est un projet ecole fait a 3. <br>
                         C'est un site fictif d'adoption pour chien. <br>
@@ -388,49 +388,43 @@
         </article>
         <article class="modal" id="englishBattleArticle">
             <h3>English Battle</h3>
-            <div>
-                <img src="./img/workInProgress.png" alt="">
+            <div class="modal_projects">
+                <img class="illustration" src="./img/workInProgress.png" alt="">
                 <div>
                     <p>
                         Projet en construction <br>
-                        Projet avec une API en Java et une application web Angular
+                        Il se compose de 2 applications: <br>
+                        - Une API en Java <br>
+                        - Une applications front en Angular
                     </p>
                     <!-- <ul>
                         <li><a class="btn" href="">English Battle</a></li>
                         <li><a class="btn" href="">GitHub</a></li>
                     </ul> -->
                 </div>
-
             </div>
-
         </article>
 
         <!-- values modals -->
         <article class="modal" id="teachArticle">
             <h3>Transmission</h3>
-            <div>
+            <div class="modal_values">
                 <img src="img/Initiateur_Apnee.jpg">
-                <div>
-                    <p>J'ai toujours appris énormément au contact des autres. Il me semble donc normal de transmettre à mon tour ce que j'ai reçu. C'est pourquoi j'ai été amener à encadrer des jeunes en escalade. J'ai aussi passé mon brevet d'initiateur apnée. Enfin j'ai été en charge d'encadrer des jeunes ingénieurs en stage de fin d'études.</p>
-                </div>
+                <p>J'ai toujours appris énormément au contact des autres. Il me semble donc normal de transmettre à mon tour ce que j'ai reçu. C'est pourquoi j'ai été amener à encadrer des jeunes en escalade. J'ai aussi passé mon brevet d'initiateur apnée. Enfin j'ai été en charge d'encadrer des jeunes ingénieurs en stage de fin d'études.</p>
             </div>
         </article>
         <article class="modal" id="competitionArticle">
             <h3>Competition</h3>
-            <div>
+            <div class="modal_values">
                 <img src="img/Competition.jpg">
-                <div>
-                    <p>Compétiteur en natation et en escalade, j'adore les challenges. La compétition est un moyen de se fixer des objectifs et de travailler à les atteindre. C'est aussi le dépassement de soi dans les moments critique ainsi qu'un bon entrainement à la gestion du stress.</p>
-                </div>
+                <p>Compétiteur en natation et en escalade, j'adore les challenges. La compétition est un moyen de se fixer des objectifs et de travailler à les atteindre. C'est aussi le dépassement de soi dans les moments critique ainsi qu'un bon entrainement à la gestion du stress.</p>
             </div>
         </article>
         <article class="modal" id="teamArticle">
             <h3>Equipe</h3>
-            <div>
+            <div class="modal_values">
                 <img src="img/Apnee_securite.jpg">
-                <div>
-                    <p>L'apnée et l'escalade sont 2 sports où la performance de l'individu n'est possible que à la condition d'avoir une confiance absolue en l'équipier. A ce titre je travail toujours en sorte que l'on puisse compter sur moi.</p>
-                </div>
+                <p>L'apnée et l'escalade sont 2 sports où la performance de l'individu n'est possible que à la condition d'avoir une confiance absolue en l'équipier. A ce titre je travail toujours en sorte que l'on puisse compter sur moi.</p>
             </div>
         </article>
     </section>
