change links for projects

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         - Apprendre de nouvelles technologies pour moi. <br>
                     </p>
                     <ul>
-                        <li class="btn"><a href="http://176.146.11.193:8081" target="_blank"><img src="./img/cheatCheets.webp"></a></li>
+                        <li class="btn"><a href="http://cheatsheets.benjaminpetel.fr" target="_blank"><img src="./img/cheatCheets.webp"></a></li>
                         <li class="btn"><a href="https://github.com/Benjamin-PETEL/CheatSheets" target="_blank"><img src="./img/github_dark.svg" alt=""></a></li>
                     </ul>
                 </div>
@@ -378,7 +378,7 @@
                         Le projet et en production sur un Raspberry Pi.
                     </p>
                     <ul>
-                        <li><a class="btn" href="http://176.146.11.193:8080" target="_blank"><img src="./img/SayWoof.webp" alt=""></a></li>
+                        <li><a class="btn" href="http://dogsymfony.benjaminpetel.fr" target="_blank"><img src="./img/SayWoof.webp" alt=""></a></li>
                         <li><a class="btn" href="https://github.com/JonathanPothin/dog-symfony" target="_blank"><img src="./img/github_dark.svg" alt=""></a></li>
                     </ul>
                 </div>
