add Aiga experience

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <img src="img/Identite_2021-2.jpg">
                     <p>J’ai commencé ma carrière dans le conseil en ingénierie pour de grands groupes automobiles & aéronautiques. En 10 ans j’ai évolué depuis un poste de concepteur vers des postes de gestion de projets</p>
                     <p>Attiré depuis longtemps par le développement, j’ai entamé en 2021 une reconversion professionnelle. J'ai suivi une formation à temps complet auprès de Human Booster afin d’obtenir un titre de concepteur/developpeur d’application RNCP niveau 6</p>
-                    <p>Suite à un stage de 4 mois, je suis à la recherche d'un poste à partir de Janvier 2022</p>
+                    <p>Suite à un premier poste de developpeur fullstack Java, je suis à la recherche d'un nouveaux challenge</p>
                 </article>
                 <ul>
                     <li><a href="img/CV_Benjamin_PETEL.pdf" target="_blank" class="btn">CV</a></li>
@@ -280,12 +280,20 @@
                         <p>Javascript</p>
                     </li>
                     <li>
+                        <img src="img/_origin/tailwind.png" alt="Bootstrap logo">
+                        <p>Tailwind</p>
+                    </li>
+                    <li>
                         <img src="img/bootstrap.svg" alt="Bootstrap logo">
                         <p>Bootstrap</p>
                     </li>
                     <li>
-                        <img src="img/AngularJS.svg" alt="AngularJS logo">
-                        <p>Angular JS</p>
+                        <img src="img/_origin/sencha_Ext.png" alt="Sencha logo">
+                        <p>Sencha Ext.js</p>
+                    </li>
+                    <li>
+                        <img src="img/AngularJS.svg" alt="Angular logo">
+                        <p>Angular</p>
                     </li>
                 </ul>
             </article>
