--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <img src="img/Identite_2021-2.jpg">
                     <p>J’ai commencé ma carrière dans le conseil en ingénierie pour de grands groupes automobiles & aéronautiques. En 10 ans j’ai évolué depuis un poste de concepteur vers des postes de gestion de projets</p>
                     <p>Attiré depuis longtemps par le développement, j’ai entamé en 2021 une reconversion professionnelle. J'ai suivi une formation à temps complet auprès de Human Booster afin d’obtenir un titre de concepteur/developpeur d’application RNCP niveau 6</p>
-                    <p>Suite à un premier poste de developpeur fullstack Java, je suis à la recherche d'un nouveaux challenge</p>
+                    <p>Suite à un premier poste de développeur fullstack Java, je suis à la recherche d'un nouveau challenge</p>
                 </article>
                 <ul>
                     <li><a href="img/CV_Benjamin_PETEL.pdf" target="_blank" class="btn">CV</a></li>
